# xiaoemby

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
.trae/rules/: xiao-emby-rules.md
conf/: replace.json
tests/: test_chinese_number_conversion.py  test_command_matching.py  test_multi_user.py
xiaomusic/: __init__.py  auth.py  cli.py  command_handler.py  config.py  config_manager.py  const.py  crontab.py  device_player.py  music_library.py  xiaomusic.py
xiaomusic/api/: app.py  dependencies.py  models.py  websocket.py
xiaomusic/api/routers/: __init__.py  device.py  file.py  music.py  playlist.py  system.py
xiaomusic/static/: index.html
xiaomusic/static/default/: index.html  main.css  md.js  setting.css  setting.html  setting.js
xiaomusic/utils/: __init__.py  emby_utils.py  network_utils.py  system_utils.py  text_utils.py
