[project]
name = "xiaoemby"
version = "0.0.2"
description = "小爱音箱播放Emby音乐库"
authors = [
{name = "backtracker", email = "daihuarong@gmail.com"},
]
dependencies = [
    "aiohttp>=3.8.6",
    "uvicorn[standard]>=0.30.1",
    "fastapi>=0.115.4",
    "starlette>=0.37.2",
    "aiofiles>=24.1.0",
    "apscheduler>=3.10.4",
    "opencc-python-reimplemented==0.1.7",
    "pillow>=10.4.0",
    "requests>=2.32.3",
    "pyjwt>=2.10.1",
    "fake-useragent>=2.2.0",
    "miservice-fork",
    "edge-tts>=7.2.3",
    "pycryptodome>=3.23.0",
    "qrcode>=8.2"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/backtracker/xiaoemby"

[project.scripts]
xiaomusic = "xiaomusic.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.4.8",
]
[tool.ruff]
lint.select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodestyle - Error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle - Warning
    "UP", # pyupgrade
]
lint.ignore = [
    "E501", # line-too-long
    "W191", # tab-indentation
]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
    "fastapi.File"
]

[tool.pdm.scripts]
start = "python app.py"
test = "pytest"



[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
